Fix icon button spacing in sticky header
Bug: T323176

--- a/resources/skins.vector.styles/components/StickyHeader.less
+++ b/resources/skins.vector.styles/components/StickyHeader.less
@@ -117,6 +117,8 @@
 
 	&-icons {
 		font-size: @font-size-sticky-header-links;
+		// T323176 Apply additional spacing between icon buttons
+		column-gap: 8px;
 	}
 
 	.vector-search-box {
